// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`diff match patch > does not use dmp for "privates" (underscore-prefixed keys) 1`] = `
[
  {
    "patch": {
      "diffMatchPatch": {
        "useDmp": "@@ -7,8 +7,72 @@
 FromUser
+RepresentingMovieOrNovelOrSomethingVeryLongThatCanBeShownAsStars
",
      },
      "id": "die-hard-ix",
    },
  },
  {
    "patch": {
      "id": "die-hard-ix",
      "set": {
        "reviews[_key=="abc123"]._type": "reviewFromUserRepresentingMovieOrNovelOrSomethingVeryLongThatCanBeShownAsStars",
      },
    },
  },
]
`;

exports[`diff match patch > does not use dmp for "type changes" (number => string) 1`] = `
[
  {
    "patch": {
      "id": "die-hard-ix",
      "set": {
        "rating": "I would give it a solid 9 on a scale from 1 to 26",
      },
    },
  },
]
`;

exports[`diff match patch > handles patching with unicode surrogate pairs 1`] = `
[
  {
    "patch": {
      "diffMatchPatch": {
        "ascii": "@@ -30,10 +30,10 @@
 tal 
-xx
+%3C3
 , re
",
        "reviews[_key=="abc123"].text": "@@ -30,15 +30,15 @@
 tal 
-%F0%9F%98%89
+%F0%9F%98%80
 , re
",
      },
      "id": "die-hard-ix",
    },
  },
]
`;

exports[`diff match patch > respects absolute length threshold 1`] = `
[
  {
    "patch": {
      "diffMatchPatch": {
        "its": "@@ -1,5 +1,10 @@
+also 
 short
",
      },
      "id": "die-hard-ix",
    },
  },
]
`;

exports[`diff match patch > respects relative length threshold (allowed) 1`] = `
[
  {
    "patch": {
      "diffMatchPatch": {
        "reviews[_key=="abc123"].text": "@@ -27,13 +27,12 @@
 an #
-7 - i
+8! I
 t wa
",
      },
      "id": "die-hard-ix",
    },
  },
]
`;

exports[`diff match patch > respects relative length threshold 1`] = `
[
  {
    "patch": {
      "diffMatchPatch": {
        "synopsis": "@@ -4,20 +4,21 @@
 n a 
-confetti cak
+sack of coffe
 e ex
@@ -35,38 +35,28 @@
 the 
-Bonwit Teller department store
+Ultra Gnoch asteroid
 , a 
@@ -80,13 +80,15 @@
 lf %22
-Simon
+Ziltoid
 %22 ph
@@ -122,27 +122,34 @@
 tor 
-Walter Cobb
+Mark Cimino
  at the 
+Tellus 
 poli
@@ -197,16 +197,12 @@
 the 
-confetti
+sack
 . He
@@ -258,41 +258,30 @@
  to 
-walk through the middle of Harlem
+travel to the asteroid
 , in
@@ -311,13 +311,12 @@
  is 
-drive
+flow
 n th
@@ -327,11 +327,13 @@
 by C
-obb
+imino
  and
@@ -359,38 +359,36 @@
 rs. 
-Harlem electrician Zeus Carver
+Ultra Gnoch miner Dave Young
  spo
@@ -431,33 +431,62 @@
 the 
+a
 st
-reet
+eroid
  before 
+t
 he 
-is kille
+coffee bugs infiltrate the asteroi
 d, b
@@ -502,13 +502,23 @@
  of 
-youth
+underpant gnome
 s at
@@ -539,14 +539,13 @@
 and 
-Carver
+Young
 , wh
",
      },
      "id": "die-hard-ix",
    },
  },
]
`;
